--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-streamlit
+streamlit==1.35.0
 pdfplumber==0.10.3
 sentence-transformers==2.2.2
-matplotlib==3.8.0
+matplotlib==3.8.4
 wordcloud==1.9.3
 torch==2.2.0
 spacy==3.7.2
 altair==5.3.0
-
