--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
-streamlit==1.35.0
-PyMuPDF==1.23.5
-sentence-transformers==2.2.2
-matplotlib==3.8.4
-wordcloud==1.9.3
-torch==2.2.0
-spacy==3.7.2
-altair==5.3.0
+streamlit>=1.28.0
+pandas>=1.5.0
+numpy>=1.24.0
+plotly>=5.15.0
+PyPDF2>=3.0.0
+python-docx>=0.8.11
+wordcloud>=1.9.2
+nltk>=3.8.1
+spacy>=3.6.0
+textstat>=0.7.3
+requests>=2.31.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
